--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <script type="text/javascript">
     // if (window.location.hostname === 'www.oneapm.com') {
-    //   var pathnameSegs = window.location.pathname.split("/docs/ci");
+    //   var pathnameSegs = window.location.pathname.split("/docs/bi");
     //   var realPathname = pathnameSegs[pathnameSegs.length - 1];
-    //   window.location.href = 'http://101.200.76.159:4567' + realPathname;
-    // } else if (window.location.hostname !== 'docs-ci.oneapm.com') {
-    //   window.location.href = 'http://101.200.76.159:4567' + window.location.pathname;
+    //   window.location.href = 'http://10.128.6.3:4567' + realPathname;
+    // } else if (window.location.hostname !== 'docs-bi.oneapm.com') {
+    //   window.location.href = 'http://10.128.6.3:4567' + window.location.pathname;
     // }
   </script>
 
@@ -519,45 +519,6 @@
 		</div>
 		</div>
 		</section>
-		<!-- <section class="section contact-section">
-		<div class="container">
-		<div class="row">
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-		<div class="footer-col">
-		<p>文档</p>
-		<ul>
-		<li><a href="">快速入门</a></li>
-		<li><a href="">功能说明</a></li>
-		<li><a href="">安装指南</a></li>
-		<li><a href="">常见问题</a></li>
-		<li><a href="">API</a></li>
-		<li><a href="">联系我们</a></li>
-		</ul>
-		</div>
-		</div>
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-		<div class="footer-col">
-		<p>语言</p>
-		<ul>
-		<li><a href="http://www.oneapm.com/ai/java.html">Java</a></li>
-		<li><a href="http://www.oneapm.com/ai/php.html">PHP</a></li>
-		<li><a href="http://www.oneapm.com/ai/dotnet.html">.net</a></li>
-		<li><a href="http://www.oneapm.com/ai/python.html">Python</a></li>
-		<li><a href="http://www.oneapm.com/ai/nodejs.html">node.js</a></li>
-		<li><a href="http://www.oneapm.com/ai/ruby.html">Ruby</a></li>
-		</ul>
-		</div>
-		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-		<figure class="figure">
-		<img src="/images/home/jishuzhichi.svg">
-		<p class="figure-title">技术支持</p>
-		<p class="figure-detail">使用 OneAPM 时，遇到任何技术上的问题，<br>都可以直接致电技术支持专线。</p>
-		<span class="phone">400-622-3101</span>
-		</figure>
-		</div>
-		</div>
-		</section> -->
 
     <div class="footer-nav-block">
   <div class="container">
