--- a/book/Alert/alert_index.html
+++ b/book/Alert/alert_index.html
@@ -224,7 +224,7 @@
 
   </head>
 
-  <body class="page-qa qa_index">
+  <body class="page-book book_Alert book_Alert_alert_index">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -322,97 +322,247 @@
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
-        <a href="/qa/Qahelp/qahelp_index.html" role="button">
-          常见问题及解决方法
+        <a href="/book/book_index.html" role="button">
+          总览
+        </a>
+      </h4>
+    </div>
+<!--    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        <ul>
+          <li><a href="/book/monitor/monitor_overview.html">总览</a></li>
+          <li><a href="/book/monitor/monitor_map.html">拓扑</a></li>
+          <li><a href="/book/monitor/monitor_webTransaction.html">web 事务</a></li>
+          <li><a href="/book/monitor/monitor_dataBase.html">数据库</a></li>
+          <li><a href="/book/monitor/monitor_external.html">外部服务</a></li>
+          <li><a href="/book/monitor/monitor_bgTask.html">后台任务</a></li>
+          <li><a href="/book/monitor/monitor_jvm.html">JVM</a></li>
+        </ul>
+      </div>
+    </div>-->
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Dashboad/dashboard_index.html" class="collapsed">
+          仪表盘
+        </a>
+      </h4>
+    </div>
+ <!--   <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        <ul>
+          <li><a href="/book/event/event_errorInfo.html">错误信息</a></li>
+          <li><a href="/book/event/event_performanceProfiling.html">性能剖析</a></li>
+        </ul>
+      </div>
+    </div>-->
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Pageview/pageview_index.html" class="collapsed">
+         访问页面
+        </a>
+      </h4>
+    </div>
+ <!--   <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        <ul>
+          <li><a href="/book/report/report_webTransaction.html">web 事务</a></li>
+          <li><a href="/book/report/report_dataBase.html">数据库</a></li>
+          <li><a href="/book/report/report_jvm.html">JVM</a></li>
+        </ul>
+      </div>
+    </div>-->
+  </div>
+
+ <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Javascript/javascript_index.html" class="collapsed">
+          脚本错误
         </a>
       </h4>
     </div>
   </div>
 
-  <div class="panel panel-default">
+   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
-        <a href="/qa/Noapp/noapp_index.html" class="collapsed">
-          探针是否部署成功
+        <a href="/book/Ajax/ajax_index.html" class="collapsed">
+          AJAX
         </a>
       </h4>
     </div>
   </div>
-  
+
+   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Trace/trace_index.html" class="collapsed">
+          慢加载追踪
+        </a>
+      </h4>
+    </div>
+  </div>
+
+   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Business/business_index.html" class="collapsed">
+          关键业务
+        </a>
+      </h4>
+    </div>
+  </div>
+
+    <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Analysis/analysis_index.html" class="collapsed">
+          组合分析
+        </a>
+      </h4>
+    </div>
+ <!--   <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        <ul>
+          <li><a href="/book/event/event_errorInfo.html">错误信息</a></li>
+          <li><a href="/book/event/event_performanceProfiling.html">性能剖析</a></li>
+        </ul>
+      </div>
+    </div>-->
+  </div>
+   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Statistics/statistics_index.html" class="collapsed">
+          特征统计
+        </a>
+      </h4>
+    </div>
+   </div>
+ <!--   <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        <ul>
+          <li><a href="/book/event/event_errorInfo.html">错误信息</a></li>
+          <li><a href="/book/event/event_performanceProfiling.html">性能剖析</a></li>
+        </ul>
+      </div>
+    </div>-->
+
+   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Pageview1/pageview_index.html" class="collapsed">
+          单页面
+        </a>
+      </h4>
+    </div>
+   </div>
+
+   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Conversation/conversation_index.html" class="collapsed">
+          会话
+        </a>
+      </h4>
+    </div>
+
+ <!--   <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        <ul>
+          <li><a href="/book/event/event_errorInfo.html">错误信息</a></li>
+          <li><a href="/book/event/event_performanceProfiling.html">性能剖析</a></li>
+        </ul>
+      </div>
+    </div>-->
+  </div>
+   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a href="/book/Setting/setting_index.html" class="collapsed">
+          设置
+        </a>
+      </h4>
+    </div>
+ <!--   <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        <ul>
+          <li><a href="/book/event/event_errorInfo.html">错误信息</a></li>
+          <li><a href="/book/event/event_performanceProfiling.html">性能剖析</a></li>
+        </ul>
+      </div>
+    </div>-->
+  </div>
+   
 </div>
 
         </div>
         <div class="col-lg-9 page-body">
           <div class="body-box">
-            <h1>常见部署问题</h1>
+            <h1>ALERT</h1>
 
-<ul>
-      <li><a href="/qa/Qahelp/qahelp_index.html">Browser Insight 常见问题解决办法</a></li>
-      <li><a href="/qa/Noapp/noapp_index.html">Browser Insight 是否部署成功</a></li>
-</ul>
-
-<p>强烈推荐用户在手动部署 Bi 的时候，使用纯文本的部署方式，或者 Js 链接本地化部署。</p>
-
-<p><strong>如何选择部署方式：</strong></p>
-
-<ul>
-<li>Bi 的部署方法较多，需要用户根据实际情况来选择。
-
-<ul>
-<li>如果用户没有修改代码的权限，则可以先部署 Ai 探针（JAVA，Python，PHP，.Net，Ruby，Nodejs），然后通过 Ai 自动注入 Bi，具体注入步骤请见上级页面中的其它文档。</li>
-<li>如果 Ai 自动注入失败，则可以申请代码修改权限，或者联系相应的研发人员，采用 Bi 的手动部署方法，具体部署方法可以参见上级页面相关文档。</li>
-<li> 如果用户本身具有代码修改权限，可以选择手动部署 Bi 探针，其中：对页面代码简洁程度要求较高则推荐“js 链接方式部署”；对页面代码简洁程度要求不高的，推荐使用“纯文本部署”。具体部署方法可以参看上级页面相关文档。</li>
-</ul></li>
-</ul>
-
-<p><strong>BI 手动部署，是否需要部署到每个页面？</strong></p>
-
-<ul>
-<li>从理论上来讲，用户应该要把 Bi 的脚本插入到每个他想监控的页面，如果想监控网站内的所有页面，那确实要把 JS 插入所有的页面，但，如果存在几个页面公用一个 head 标签的情况，也就是所谓的“全局页面”，或者“全局模块”，那就放在这个全局的 head 标签里面就好了，就会省下很多工作量。</li>
-</ul>
-
-<p><strong>BI 手工嵌码一定放在 head 标签的第一行吗？</strong></p>
-
-<ul>
-<li>如果是手动嵌码的话建议您放在 head 标签中的第一行，如果有 meta 标签的话放在 meta 的紧下面，保证在所有的 script 前面，这样可以保证数据的精准性。从技术上讲，放在页面的任何位置包括 body 里面也可以，如果您测试之后确定能采集到您想要的数据，则可以放在 body 里面。</li>
-</ul>
-
-<p><strong>BI 探针如何更新?</strong></p>
-
-<ul>
-<li>Bi 探针发布了涉及到版本号的新版探针需要更新，Bi 探针的插入方式是 Js 嵌入方式，本身没有自动化的更新方法 。
-
-<ul>
-<li>如果是通过 Ai 自动注入的话，只需要重启 Ai 应用就可以更新好 Bi 探针了</li>
-<li>如果是独立部署也就是手动插码的形式的话，则需要重新获取 Bi 的新版 JS 脚本，<br></li>
-</ul></li>
-</ul>
-
-<p><strong>手动部署的 JS 链接和纯文本方式如何相互转变？</strong></p>
-
-<ul>
-<li>已经部署了 Bi 的 JS 链接或者 JS 纯文本，但是由于种种原因想要转换为另一个部署方式 ，Bi 手动部署采用自动插码的方式，不能自动转化插码内容，需手动更改。</li>
-</ul>
-
-<p><strong>什么样的用户适合纯文本部署方式</strong></p>
-
-<ul>
-<li>JS 链接部署的页面在被用户第一次访问时会下载 JS 脚本到本地，大概不到 10k，如果对页面性能要求极高，则可以采取纯文本方式.</li>
-</ul>
-
-<p><strong>什么样的用户适合 JS 链接方式部署</strong></p>
-
-<ul>
-<li>如果对页面的精简程度要求较高，不能忍受纯文本方式的大量代码，则可以采用 JS 链接的方式部署。</li>
-</ul>
-
-<p><strong>如何实现纯文本部署和 JS 链接部署方式的转换</strong></p>
-
-<ul>
-<li>进入您想转换部署方式的 Bi 应用;</li>
-<li>点击“应用设置”按钮，进入下图所示页面;</li>
-<li>点击相应按钮，获取本 Bi 应用的 JS 链接或者纯文本脚本，覆盖之前在页面中插入的 JS 脚本即可。</li>
-</ul>
+<p>页面位置：bi-&gt;报警
+应用程序经常会出现一些问题，我们又不可能随时都要在 Bi 平台上查看性能数据，如果能够将关心的浏览器性能数据通过整合，自定义设置如果某一对象的指标数据达到阈值（报警线）即触发报警并发送通知，旨在帮助用户灵活使用 BI，提高工作效率。
+报警系统主要由三部分组成：
+* 报警策略：报警策略的配置，当有违反报警规则的事件产生的时候会产生什么样的报警行为。
+* 报警规则：根据用户配置的规则对性能数据进行检测，当检测到性能数据有异常时，报警将会被触发从而产生报警事件。
+* 报警行为：报警行为会在报警策略中应用，其中包括邮件通知和 Webhook 两种。
+名词解释
+<img src="/images/book/alert.png" alt="Alert" />
+报警流程示意图：
+<img src="/images/book/alert01.png" alt="Alert01" />
+<strong>报警规则</strong>
+首先展示报警规则列表：规则名称、报警类型、可用性、操作设置，支持对当前规则是否启用、删除、编辑等设置。
+<img src="/images/book/alert02.png" alt="Alert02" />
+点击 “ + ” 按钮创建新的报警规则。
+（1）总览
+在当前页面，用户自行设置该报警事件名称后进行规则基础设定：
+* 可用性：是否启用当前的报警，
+* 类型：选择报警规则适用的范围（即为报警对象），目前 Bi 支持以应用为整体的报警；
+* 可用规则：选择接收产生报警的时间，在不可用时间中设置不接收报警的时间；
+<img src="/images/book/alert03.png" alt="Alert03" />
+一般情况下，我们需要及时收到报警并进行快速的处理，但在特殊的情况下是不需要收到报警的，可以通过不可用时间进行设置保存，默认情况下报警规则一直是可用的。
+* 等待时间：为了预防报警风暴的产生，对报警频率进行控制；
+<img src="/images/book/alert04.png" alt="Alert04" />
+应用的健康状态时刻在进行着动态的变化，这样也就导致了报警事件的不断产生，问题邮件的不断推送。但是往往我们是不需要这样频繁的邮件发送的， 等待时间 很好的为我们解决了报警风暴的问题，我们可以通过配置等待时间来决定邮件发送的频率，默认时间是30min。
+（2）报警对象：设置报警对象，即设置当前报警事件的适用范围，目前 Bi 支持以应用为整体的报警。 
+<img src="/images/book/alert05.png" alt="Alert05" />
+（3）严重条件：用户设置满足严重条件的指标阈值作为报警条件，当满足告警线时，即触发报警事件，从而触发行为，如发送电子邮件等。
+关于告警阈值设置我们提供两种方式：静态门限和无数据报警
+<img src="/images/book/alert06.png" alt="Alert06" />
+* 静态门限：提供数值门限和频率门限两种阈值检测方式，针对数值门限可进行平均值、之和、最大值、最小值的设置，也可以对同意条件进行多条语句的判断，如在规则中我们对页面加载的平均时间&gt;4s的进行报警，
+这样会对最大值和最小值进行平均反而看不到具体的问题，可以同时设置页面加载时间最大值&gt;6s进行预测。
+<img src="/images/book/alert07.png" alt="Alert07" />
+频率门限是根据同一个问题发生的频率进行预测报警。
+<img src="/images/book/alert08.png" alt="Alert08" />
+* 无数据报警：针对任何条件的无数据报警只可设置一次
+<img src="/images/book/alert09.png" alt="Alert09" />
+（4）警告条件：用户设置满足警告条件的指标阈值作为报警条件，当满足告警线时，即触发报警事件，默认是5min，时间段可进行设置。
+警告条件的设置和严重条件的设置大致一样，如果对同一个条件进行了严重条件和警告条件的配置时，系统会先判断是否是严重，只有在严重的条件不为真时进行判断警告条件，
+告警紧急程度：严重条件 &gt; 警告条件
+<img src="/images/book/alert10.png" alt="Alert10" />
+<strong>报警行为</strong>
+定义推送规则方式，目前支持邮件或者 webhook 的方式实现报警消息的推送。
+<img src="/images/book/alert11.png" alt="Alert11" />
+<strong>报警策略</strong>
+为自动监控处理问题提供的一种机制，用户通过主动选择一些和应用健康状态相关的报警事件，通过邮件等行为及时了解和处理发生的问题。
+配置报警策略步骤：
+1.选择创建策略 ，进行报警策略的配置。
+2.填写策略名称。
+3.进行可用性选择，可用则选中打勾。
+4.选择会触发报警策略的报警事件。
+5.选择和报警事件相对应的报警规则。报警规则可以在已有的报警规则中选取，也可以进行新的报警规则的创建。
+<img src="/images/book/alert12.png" alt="Alert12" />
+当触发报警后，在右侧栏中的报警状态中会显示有报警
+<img src="/images/book/alert13.png" alt="Alert13" />
+点击事件记录会查看具体报警的事件，选择是否进行受理
+<img src="/images/book/alert14.png" alt="Alert14" />
+点击受理后，发出受理邮件且该报警对象在触发新的报警前不再触发报警行为，点击详情可查看当前报警是否受理，同时有行为的触发时可看到具体的受理人。
+<img src="/images/book/alert15.png" alt="Alert15" /></p>
 
             <!--<hr style="margin-top: 50px;" />
 <div class="alert alert-warning" style="text-align:center; margin: 40px 0px;">
@@ -472,8 +622,9 @@
 
 
     <script type="text/javascript">
-        $(function() {
-          (function () {
+      $(function() {
+        // $(".navbar-default .navbar-nav a[href='/agent/']").parent().addClass("active");
+        (function () {
             $('.panel-default').mouseenter(function () {
               if(!$(this).hasClass('active')){
                 $(this).children().addClass('in');
@@ -495,7 +646,7 @@
               });
               panelHead.parent().addClass('active');
             }else if(keyInfo.indexOf('.') <0) {
-              keyInfo="'"+key+"java_index.html"+"'";
+              keyInfo="'"+key+"book_index.html"+"'";
               panelHead= $(".panel-default  a[href="+keyInfo+"]").parent().parent();
               panelHead.siblings().addClass('in');
               panelHead.parent().siblings('div').map(function () {
@@ -511,7 +662,7 @@
                 panelHead.parent().addClass('active');
               }
           })();
-        });
+      });
     </script>
   </body>
 </html>
