--- a/book/book_index.html
+++ b/book/book_index.html
@@ -506,17 +506,17 @@
             <h1>总览</h1>
 
 <ul>
-   <li><a href="/book/dashboard.html">仪表盘</a></li>
-   <li><a href="/book/pageview.html">访问页面</a></li> 
-   <li><a href="/book/javascript.html">脚本错误</a></li>         
-   <li><a href="/book/ajax.html">AJAX</a></li>
-   <li><a href="/book/trace.html">慢加载追踪</a></li>
-   <li><a href="/book/cruxBusiness.html">关键业务</a></li>
-   <li><a href="/book/groupAnalysis.html">组合分析</a></li>
-   <li><a href="/book/conversation.html">会话</a></li>
-   <li><a href="/book/statistics.html">特征统计</a></li>
-   <li><a href="/book/singlePage.html">单页面</a></li>
-   <li><a href="/book/setting.html">设置</a></li>
+   <li><a href="/book/Dashboard/dashboard_index.html">仪表盘</a></li>
+   <li><a href="/book/Pageview/pageview_index.html">访问页面</a></li> 
+   <li><a href="/book/Javascript/javascript_index.html">脚本错误</a></li>         
+   <li><a href="/book/Ajax/ajax_index.html">AJAX</a></li>
+   <li><a href="/book/Trace/trace_index.html">慢加载追踪</a></li>
+   <li><a href="/book/Business/business_index.html">关键业务</a></li>
+   <li><a href="/book/Analysis/analysis_index.html">组合分析</a></li>
+   <li><a href="/book/Statistics/statistics_index.html">特征统计</a></li>
+   <li><a href="/book/Pageview1/pageview_index.html">单页面</a></li>
+   <li><a href="/book/Conversation/conversation_index.html">会话</a></li>
+   <li><a href="/book/Setting/setting_index.html">设置</a></li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
